convert heavy images into webp

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -56,7 +56,7 @@
           <div class="image-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <div data-depth="0.30" class="image">
-                <img src="/images/cube.png" alt=""/>
+                <img src="/images/cube.webp" alt=""/>
               </div>
             </div>
           </div>
@@ -118,7 +118,7 @@
   {{ with (.Site.GetPage "section" "solutions") }}
 
   <section class="business-section-two">
-    <div class="pattern-layer" style="background-image: url(/images/background/pattern-11.png)"></div>
+    <div class="pattern-layer" style="background-image: url(/images/background/pattern-11.webp)"></div>
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
@@ -126,7 +126,7 @@
         <div class="text">{{ .Params.subtitle }}</div>
       </div>
       <div class="inner-container">
-        <div class="pattern-layer-two" style="background-image: url(/images/background/3.png)"></div>
+        <div class="pattern-layer-two" style="background-image: url(/images/background/3.webp)"></div>
         <!-- Business Info Tabs -->
         <div class="business-info-tabs">
           <!-- Business Tabs -->
