--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <!-- Main Footer -->
   <footer class="main-footer">
     <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.png)"></div>
-    <div class="pattern-layer-two" style="background-image: url(/images/background/pattern-5.png)"></div>
+    <div class="pattern-layer-two" style="background-image: url(/images/background/pattern-5.webp)"></div>
     <div class="auto-container">
       <!--Widgets Section-->
       <div class="widgets-section">
