--- a/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
@@ -1,6 +1,6 @@
 <!--End Page Title-->
 <section class="page-title">
-    <div class="pattern-layer" style="background-image: url(/images/background/pattern-12.png)"></div>
+    <div class="pattern-layer" style="background-image: url(/images/background/pattern-12.webp)"></div>
     <div class="auto-container">
         <h1> {{ .Params.title | safeHTML }}</h1>
         <ul class="bread-crumb clearfix">
