--- a/qdrant-landing/themes/qdrant/layouts/documentation.html
+++ b/qdrant-landing/themes/qdrant/layouts/documentation.html
@@ -95,7 +95,7 @@
 
   <!--End Page Title-->
   <section class="page-title">
-    <div class="pattern-layer" style="background-image: url(images/background/pattern-12.png)"></div>
+    <div class="pattern-layer" style="background-image: url(images/background/pattern-12.webp)"></div>
     <div class="auto-container">
       <h1>Documentation</h1>
       <ul class="bread-crumb clearfix">
@@ -237,8 +237,8 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <div class="pattern-layer" style="background-image: url(images/background/pattern-4.png)"></div>
-    <div class="pattern-layer-two" style="background-image: url(images/background/pattern-5.png)"></div>
+    <div class="pattern-layer" style="background-image: url(images/background/pattern-4.webp)"></div>
+    <div class="pattern-layer-two" style="background-image: url(images/background/pattern-5.webp)"></div>
     <div class="auto-container">
       <!--Widgets Section-->
       <div class="widgets-section">
