--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -216,7 +216,7 @@
 
   {{ with (.Site.GetPage "section" "articles") }}
   <!-- End Articles Section -->
-  <section id="articles" class="projects-section-two" style="background-image: url(/images/background/pattern-9.png)">
+  <section id="articles" class="projects-section-two" style="background-image: url(/images/background/pattern-9.webp)">
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
