--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -12,7 +12,7 @@
     color:var(--brand-primary);
   }
   .main-header {
-    background-image: url(/images/background/2.png);
+    background-image: url(/images/background/2.webp);
   }
   #mce-success-response {
     padding-bottom: 25px;
