--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -5982,7 +5982,7 @@ img{
 	top:0px;
 	right:0px;
 	bottom:0px;
-	background:url(../images/background/pattern-15.png) no-repeat;
+	background:url(../images/background/pattern-15.webp) no-repeat;
 	background-size:cover;
 }
 
