--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.png)"></div>
+    <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.webp)"></div>
     <div class="pattern-layer-two" style="background-image: url(/images/background/pattern-5.webp)"></div>
     <div class="auto-container">
       <!--Widgets Section-->
