--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -60,7 +60,9 @@
         <script src="js/respond.js"></script><![endif]-->
 
         <!-- Netlify identity -->
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        <!-- Required because netlify sends a registration link that redirects to the home page -->
+        <!-- but commented because slows down a site and used extremely rarely -->
+        <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
     </head>
 
     <body>
