--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -57,7 +57,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
           <div class="image-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <div data-depth="0.30" class="image">
-                <img src="/images/cube.webp" alt=""/>
+                <img src="/images/qdrant_hero_image.svg" alt=""/>
               </div>
             </div>
           </div>
