tutorial button => demos button, svg optimisation

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -28,8 +28,8 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                 <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive mr-sm-3" target="_blank" href="{{ .Site.Params.quick_start }}">
                   <span class="text">Quick Start Guide</span>
                 </a>
-                <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive" target="_blank" href="{{ .Site.Params.tutorial }}">
-                  <span class="text">Tutorial</span>
+                <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive" href="{{ .Site.Params.demos }}">
+                  <span class="text">Demos</span>
                 </a>
 
               <!-- <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4> -->
