--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -127,7 +127,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
         <div class="text">{{ .Params.subtitle }}</div>
       </div>
       <div class="inner-container">
-        <div class="pattern-layer-two" style="background-image: url(/images/background/3.webp)"></div>
+        <div class="pattern-layer-two"></div>
         <!-- Business Info Tabs -->
         <div class="business-info-tabs">
           <!-- Business Tabs -->
