upd copyright year

--- a/qdrant-landing/themes/qdrant/layouts/solutions.html
+++ b/qdrant-landing/themes/qdrant/layouts/solutions.html
@@ -250,7 +250,7 @@
 
           <!-- Copyright Column -->
           <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-            <div class="copyright">&copy; 2021 Qdrant. All Rights Reserved</div>
+            <div class="copyright">&copy; {{ now.Format "2006" }} Qdrant. All Rights Reserved</div>
           </div>
 
           <!-- Language Column -->
