--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -63,6 +63,10 @@
         <!-- Required because netlify sends a registration link that redirects to the home page -->
         <!-- but commented because slows down a site and used extremely rarely -->
         <!-- <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>-->
+
+        {{ if eq .Section "benchmarks" }}
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        {{ end }}
     </head>
 
     <body>
