new colors, separated file for the header

--- a/qdrant-landing/themes/qdrant/static/css/colors.css
+++ b/qdrant-landing/themes/qdrant/static/css/colors.css
@@ -1,6 +1,9 @@
 /* https://coolors.co/b81438-6e0c21-182b3a-86ba90-f5f3bb */
 
 :root {
-  --brand-primary: #bc1439;
-  --brand-secondary: #182b3a;
+  --brand-primary: #DC244C;
+  --brand-secondary: #24386C;
+  --brand-gray: #7589BE;
+  --brand-light-grey: #EBF1FF;
+
 }
