--- a/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
@@ -7,6 +7,8 @@
     background: var(--white);
     border: 0;
     line-height: 1;
+    box-shadow: inset 0 0 0 1px var(--brand-primary);
+    border-radius: 32px;
 
     &:before {
       border-radius: 0.25rem;
@@ -31,6 +33,7 @@
       -webkit-transform-origin: top right;
       transform-origin: top right;
       background-color: var(--brand-primary);
+      border-radius: 32px;
     }
 
     &:hover {
