--- a/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
@@ -9,9 +9,9 @@
   padding: 1.6rem 1rem;
   position: relative;
   border-radius: 5px;
-  background: var(--brand-secondary);
-  font-family: "Anonymous Pro", monospace;
-  font-size: 1.4rem;
+  background: var(--brand-light-grey);
+  font-family: "SF Mono", "Anonymous Pro", monospace;
+  font-size: 18px;
 
   @media (max-width: 1140px) {
     background: var(--gray);
@@ -24,7 +24,7 @@
 
   &__text {
     white-space: pre-wrap;
-    color: white;
+    color: var(--brand-secondary);
   }
 
   &__btn {
@@ -45,12 +45,12 @@
     right: 10px;
     color: var(--white);
     border-radius: 50%;
-    background: var(--brand-primary);
+    background: var(--brand-secondary);
 
     &:hover {
-      color: var(--brand-primary);
-      background-color: var(--white);
-      box-shadow: inset 0 0 0 2px var(--brand-primary);
+      color: var(--white);
+      background-color: var(--brand-primary);
+      //box-shadow: inset 0 0 0 2px var(--brand-primary);
     }
 
     @include media-breakpoint-up(sm) {
