more changes according to the new design

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -10,9 +10,9 @@
           <div class="content-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <h1>Neural Search Engine</h1>
-              <h4 class="d-inline-block mb-sm-3">Build your own exclusive AI products.</h4><br>
+              <h4 class="d-inline-block mb-5">Build your own exclusive AI products.</h4><br>
 
-                <div class="hero-code mt-3 mb-4">
+                <div class="hero-code mb-4">
                   <!-- Don't change an alignment inside this code tag-->
                   <code class="hero-code__text">docker pull qdrant/qdrant
 docker run -p 6333:6333 qdrant/qdrant</code>
@@ -21,7 +21,7 @@ docker run -p 6333:6333 qdrant/qdrant</code>
                   </a>
                 </div> <br>
 
-              <div class="sec-title text">Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
+              <div class="sec-title text mb-5">Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
                 or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></div>
 
                 <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big btn-style-four_responsive mr-sm-3" target="_blank" href="{{ .Site.Params.quick_start }}">
