--- a/qdrant-landing/themes/qdrant/static/css/blocks/header.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/header.scss
@@ -387,6 +387,7 @@
     > li.dropdown {
       &:hover {
         > ul {
+          margin-top: 10px;
           visibility: visible;
           -moz-transform: rotateX(0deg);
           -ms-transform: rotateX(0deg);
