--- a/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/hero-code.scss
@@ -13,6 +13,10 @@
   font-family: "SF Mono", "Anonymous Pro", monospace;
   font-size: 18px;
 
+  code {
+    font-size: 18px;
+  }
+
   @media (max-width: 1140px) {
     background: var(--gray);
   }
