--- a/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
@@ -347,7 +347,7 @@
   }
 
   &_rounded {
-    border-radius: 5px;
+    border-radius: 40px;
   }
 
   &_reversed {
@@ -375,7 +375,8 @@
       font-size: 1rem;
 
       @include media-breakpoint-up(md) {
-        font-size: 1.4rem;
+        font-size: 24px;
+        font-weight: 700;
       }
 
     }
