--- a/qdrant-landing/themes/qdrant/static/css/blocks/header.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/header.scss
@@ -21,6 +21,7 @@
   -op-animation-duration: 500ms;
   -webkit-animation-duration: 500ms;
   animation-duration: 500ms;
+  background: var(--white);
 
   .header-top {
     padding: 18px 0;
