--- a/qdrant-landing/themes/qdrant/static/css/blocks/logo.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/logo.scss
@@ -2,7 +2,7 @@
   &__link {
     display: block;
     height: 100%;
-    background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
+    background: url("/images/logo_with_text.svg") no-repeat;
     background-size: contain;
   }
 
@@ -18,7 +18,7 @@
       background-size: contain;
 
       @media only screen and (min-width: 1024px) and (max-width: 1140px) {
-        background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
+        background: url("/images/logo_with_text.svg") no-repeat;
         background-size: contain;
       }
     }
@@ -32,12 +32,12 @@
 
 .fixed-header .logo_with-text.logo_home .logo__link {
   @media only screen and (min-width: 1024px) and (max-width: 1140px) {
-    background: url("/images/logo_with_text_dark_bg.svg") no-repeat;
+    background: url("/images/logo_with_text.svg") no-repeat;
     background-size: contain;
   }
 }
 // preload images
 body::after{
   position:absolute; width:0; height:0; overflow:hidden; z-index:-1; // hide images
-  content:url("/images/logo_with_text.svg") url("/images/logo_with_text_dark_bg.svg");
+  content:url("/images/logo_with_text.svg");
 }
