mobile view for the header and the top banner

--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -86,10 +86,9 @@
             {{ end }}
 
               <!--Header-Upper-->
-                <div class="auto-container">
-                  <div class="clearfix">
+                <div class="auto-container d-flex justify-content-between">
 
-                    <div class="pull-left logo-box">
+                    <div class="logo-box">
                       <div class="logo logo_with-text {{ if .IsHome }}logo_home{{ end }}">
                           <a href="/" class="logo__link"></a>
                       </div>
@@ -153,7 +152,6 @@
 
                     </div>
 
-                  </div>
                 </div>
                 <!--End Header Upper-->
 
