--- a/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/button.scss
@@ -10,6 +10,11 @@
     box-shadow: inset 0 0 0 1px var(--brand-primary);
     overflow: hidden;
 
+    @include media-breakpoint-down(md) {
+      width: calc(100% - 20px);
+      margin: 10px 10px 5px;
+    };
+
     &:before {
       width: 100%;
       height: 100%;
