--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -7,57 +7,7 @@
             {{ partial "blogpost" .}}
         </section>
 
-        <!-- Contact Form -->
-        <section class="content-column offset-lg-3 col-lg-6 col-md-12 col-sm-12">
-
-            <!-- Newsletter Form -->
-            <div class="newsletter-form">
-                <form action="{{ .Site.Params.mailchimp_subscribe }}" method="post" id="mc-embedded-subscribe-form"
-                      name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div class="form-group">
-                        <input type="email" name="EMAIL" value="" placeholder="Enter Your Email" required=""
-                               id="mce-EMAIL">
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                            <input type="text" name="{{ .Site.Params.mailchimp_subscribe_id }}" tabindex="-1" value="">
-                        </div>
-                        <button type="submit" class="theme-btn btn-style-three"><span class="txt">Get updates</span>
-                        </button>
-                    </div>
-                </form>
-            </div>
-        </section>
-        <!-- End of Contact Form -->
-
-        <!-- Social Media Links -->
-        <section class="col-12 contact-info-section pt-0">
-            <div class="auto-container">
-                <!-- Sec Title -->
-                <div class="inner-container">
-                    <div class="row clearfix">
-
-                        <!-- Info Column -->
-                        <div class="info-column col-12">
-                            <div class="inner-column pl-0 text-center">
-                                <ul class="d-flex justify-content-between">
-                                    <li><a href="{{ .Site.Params.discord }}" target="_blank"><i
-                                            class="fab fa-discord"></i> Discord</a></li>
-                                    <li><a href="{{ .Site.Params.twitter }}" target="_blank"><i
-                                            class="fab fa-twitter"></i> Twitter</a></li>
-                                    <li><a href="{{ .Site.Params.linkedin }}" target="_blank"><i
-                                            class="fab fa-linkedin"></i> Linkedin</a></li>
-                                    <li><a href="{{ .Site.Params.facebook }}" target="_blank"><i
-                                            class="fab fa-facebook"></i> Facebook</a></li>
-                                    <li><a href="{{ .Site.Params.github }}" target="_blank"><i
-                                            class="fab fa-github"></i> Github</a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End of Social Media Links -->
+        {{ partial "article_footer" . }}
 
         {{ partial "recent_news" . }}
     </div>
