upd table visualization

--- a/qdrant-landing/themes/qdrant/layouts/partials/benchmark_chart.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/benchmark_chart.html
@@ -28,8 +28,8 @@
   </label> |
 
   <label>
-    <input type="radio" name="plot-value-{{ .Params.id }}" value="p99_time"  onclick="renderSelected('{{ .Params.id }}', this.value)"/>
-    p99 latency
+    <input type="radio" name="plot-value-{{ .Params.id }}" value="total_upload_time"  onclick="renderSelected('{{ .Params.id }}', this.value)"/>
+    Upload time
   </label>
 
 
