--- a/qdrant-landing/themes/qdrant/static/css/main.scss
+++ b/qdrant-landing/themes/qdrant/static/css/main.scss
@@ -132,7 +132,7 @@ h1{
 }
 
 h2{
-	font-size:44px;
+	font-size:40px;
 }
 
 h3{
@@ -144,7 +144,7 @@ h4{
 }
 
 h5{
-	font-size:20px;
+	font-size:24px;
 }
 
 h6{
@@ -364,7 +364,6 @@ img{
 
 .sec-title h2{
 	position:relative;
-	color:#2b2a41;
 	font-weight:700;
 	line-height:1.2em;
 	margin-bottom:0;
@@ -377,9 +376,9 @@ img{
 
 .sec-title .text{
 	position:relative;
-	font-size:16px;
+	font-size:18px;
 	line-height:1.8em;
-	color:#5a5a5a;
+	color: var(--brand-gray);
 	margin-top:12px;
 }
 
@@ -2963,8 +2962,13 @@ img{
 }
 
 .feature-block{
+	width: 285px;
 	position:relative;
 	margin-bottom:30px;
+	&:nth-child(2) {
+		margin-left: 5%;
+		margin-right: 5%;
+	}
 }
 
 .feature-block .inner-box{
@@ -2973,12 +2977,10 @@ img{
 
 .feature-block .inner-box .icon-box{
 	position:relative;
-	height:160px;
 	color:var(--brand-primary);
-	font-size:80px;
-	text-align:center;
-	line-height:160px;
-	margin-bottom:20px;
+	font-size:48px;
+	line-height: 1;
+	margin-bottom: 12px;
 }
 
 .feature-block .inner-box h5{
@@ -2990,12 +2992,6 @@ img{
 
 .feature-block .inner-box h5 a{
 	position:relative;
-	color:#2b2b2b;
-	/* -webkit-transition:all 300ms ease; */
-	/* -ms-transition:all 300ms ease; */
-	/* -o-transition:all 300ms ease; */
-	/* -moz-transition:all 300ms ease; */
-	/* transition:all 300ms ease; */
 }
 
 .feature-block .inner-box h5 a:hover{
@@ -3005,9 +3001,21 @@ img{
 .feature-block .inner-box .text{
 	position:relative;
 	line-height:1.7em;
-	color:#5a5a5a;
-	font-size:16px;
+	color: var(--brand-gray);
+	font-size:18px;
 	margin-bottom:0;
+
+	p {
+		line-height: 28px;
+	}
+}
+
+.feature-block .inner-box .text a {
+ color: var(--brand-secondary);
+}
+
+.feature-block .inner-box .text a:hover {
+	color: var(--brand-primary);
 }
 
 /***
